--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: #0a0714;
-  background-image: url("img/bg.png");
+  background-image: url("http://the-prequels.com/img/bg.png");
 }
 
 h1 {
