--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body {
 
 h1 {
   color: #41a4c2;
-  font-family: "IBM Plex Sans Medium", Arial, Sans-Serif;
+  font-family: "Krona One", Arial, Sans-Serif;
   font-size: 5em;
   font-weight: 500;
   text-align: left;
@@ -14,7 +14,7 @@ h1 {
 
 h2 {
   color: #ffffff;
-  font-family: "IBM Plex Sans", Arial, Sans-Serif;
+  font-family: "Roboto Condensed", Arial, Sans-Serif;
   font-size: 3em;
   font-weight: 200;
   text-align: left;
@@ -22,7 +22,7 @@ h2 {
 }
 
 h3 {
-  font-family: "IBM Plex Sans", Arial, Sans-Serif;
+  font-family: "Roboto Condensed", Arial, Sans-Serif;
   font-size: 3em;
   font-weight: 200;
   color: #cccccc;
@@ -30,7 +30,7 @@ h3 {
 }
 
 a {
-  font-family: "IBM Plex Sans", Arial, Sans-Serif;
+  font-family: "Roboto Condensed", Arial, Sans-Serif;
   font-size: 1em;
   font-weight: 200;
   color: #cccccc;
@@ -38,7 +38,7 @@ a {
 }
 
 p {
-  font-family: "IBM Plex Sans", Arial, Sans-Serif;
+  font-family: "Roboto Condensed", Arial, Sans-Serif;
   font-size: 1em;
   font-weight: 200;
   color: #cccccc;
@@ -84,4 +84,4 @@ li {
   text-align: center;
 }
 
-/*# sourceMappingURL=index.css.map */
+
