--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-    color: #ccc;
+    color: #003333;
     background-image: url("http://the-prequels.com/img/bg_dark.png");
     font-size: 0.8em;
 }
