--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
     color: #003333;
-    background-image: url("http://the-prequels.com/img/bg_dark.png");
+    background-image: url("http://the-prequels.com/img/bg_dark1.png");
     font-size: 0.8em;
 }
 div {
