--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ div {
 }
 
 h1 {
-    color: #7339cc;
+    color: #98ad44;
     font-family: krok, krona one, sans-serif;
     font-weight: 400;
     font-style: normal;
